--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -26,6 +27,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "prettier": "^2.8.3"
   }
 }
