add commitlint configuration

--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,8 @@
   "trailingComma": "none",
   "tabWidth": 2,
   "singleQuote": true,
-  "printWidth": 80
+  "printWidth": 80,
+  "jsxSingleQuote": true,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
