--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scalable-nextjs-app",
   "version": "0.1.0",
   "private": true,
+  "workspaces": ["packages/**"],
   "scripts": {
     "prepare": "husky install",
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
